an actual competent developer who knows what they're doing,  which is a rare
sight in the unblocked games world.  The current competition is dominated by
people who don't  have a clue  what they're doing and use ChatGPT to  "code"
their infrastructure. No Name Games has and will stay on top of the competi-
tion.
==================================CHANGELOG=================================
01/27/2026:
[+] Added Jetpack Joyride

01/23/2026:
[+] Added Omori (Thanks for the suggestions Bunda, Rory, Fartazer, Batcrazy)
[+] Added Swords & Souls (Thanks for the suggestion)
[+] Fixed Pacman (Thanks for the bug report bryson and mr dingleberry)

01/22/2026:
[!] Sorry for being slow on the updates I've been pretty busy.
[+] Added Warnament (Thanks for the suggestion!)

01/17/2026:
[+] Added Funny Battle Simulator 1 & 2 (Close to T.A.B.S) (Thanks for the
suggestion Sean O Da Goat)

01/16/2026:
[+] Re-added Crossy Road (Thanks for the suggestion!)
[+] Added Dead Plate (Thanks for the suggestion!)
[+] Added Dead Plate (Thanks for the suggestion!)
[+] Fixed Level Devil being misspelt

01/07/2026:
[!] It appears No Name Games was blocked for some people! But don't worry
that's why I'm here.
[!] Go to a new tab, type in tiny.cc/nngexternal3
[!] Once you go there press Ctrl + S to save the file to your downloads
[!] Once you've done that open the file that you saved and we're back! :D

01/06/2026:
[!] Happy New Year! Sorry for being so late on the update, I took a break
like everyone else. But I'm back!
[+] Added Candy Crush (Thanks for the suggestion kimmy j)
[+] Added Class of '09 (Thanks for the suggestion emilee :>)
[+] Added Haunt the House (Thanks for the suggestion Luke)
[+] Added Ice Climber (Thanks for the suggestion DW I'M ALRD IN YOUR SKIN 
;))
[+] Added Pokémon Gold and Pokémon Silver (Thanks for the suggestion KLG)

12/18/2025:
[+] Added Google Doodle Baseball & Google Snake (Thanks for the suggestion 
"ok" but in a essdee way)